fixed bug where img would overflow the skillbox

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -963,8 +963,6 @@
     gap: 50px;
   }
   #Skills .container .skillBox {
-    width: 270px;
-    height: 350px;
     margin-left: 15px;
   }
 }
