--- a/src/styles/media-queries/Skills-media-queries.scss
+++ b/src/styles/media-queries/Skills-media-queries.scss
@@ -19,8 +19,6 @@
     .container {
       gap: 50px;
       .skillBox {
-        width: 270px;
-        height: 350px;
         margin-left: 15px;
       }
     }
